--- a/app/src/main/res/layout/activity_clasificacion.xml
+++ b/app/src/main/res/layout/activity_clasificacion.xml
@@ -264,7 +264,7 @@
                     android:padding="3dip"
                     android:text=""
                     android:gravity="center"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/black"/>
 
                 <TextView
                     android:id="@+id/puntos8"
